infra/security-groups/main.tf

variable "vpc_id" {}
variable "ec2_sg_name" {}
variable "ec2_sg_name_for_python_api" {}
variable "public_subnet_cidr_block" {}

output "sg_ec2_sg_ssh_hhtp_id" {
  value = aws_security_group.ec2_sg_ssh_http.id
  
}


output "rds_mysql_sg_id" {
  value = aws_security_group.rds_mysql_sg.id
  
}
output "sg_ec2_for_python_api" {
  value = aws_security_group.ec2_sg_python_api.id
  
}
resource "aws_security_group" "ec2_sg_ssh_http" {
  name = var.ec2_sg_name
  description = "Enable the ports 22 and 80"
  vpc_id = var.vpc_id



  ingress {
    description = "Allow request SSH from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }

  ingress {
    description = "Allow Http request from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 80
    to_port = 80
    protocol = "tcp"
  }
  
  ingress {
    description = "Allow Http request from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 443
    to_port = 443
    protocol = "tcp"
  }
  
  egress{
    description = "allow outgoing request"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name ="Security Groups to allow SSH (22) and HTTP(80)"
  }
  
}


resource "aws_security_group" "ec2_sg_python_api"{
  name = var.ec2_sg_name_for_python_api
  description = "Enable the Port 5000 for python api"
  vpc_id = var.vpc_id


ingress{
  description = "Aloow traffic pn port 5000"
  cidr_blocks = ["0.0.0.0/0"]
  from_port = 5000
  to_port = 5000
  protocol = "tcp"

}

tags = {
  Name = "Sg to allow traffic on port 5000"
}
}


resource "aws_security_group" "rds_mysql_sg" {
  name = "rds-sg"
  description = "Allow access to RDS from the EC2 present in the public subnets"
  vpc_id = var.vpc_id



  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = var.public_subnet_cidr_block
  }
  
}
